--- a/三件套/html/笔记.md
+++ b/三件套/html/笔记.md
@@ -1,2 +1,323 @@
 # html
 
+## 基础
+
+1. 前端需要注意哪些SEO
+2. HTTP的请求方法
+3. 浏览器地址栏输入URL到页面显示发生了哪些步骤
+4. 如何进行网站性能优化
+5. HTTP状态码及其含义
+6. HTML5语义化的理解
+7. 浏览器内核的理解
+8. HTML5有哪些新特性，移除了哪些元素
+9. HTML5的离线缓存怎么使用，工作原理解释一下
+10. 描述一下cookies、sessionStorage和localStorage的区别
+11. web标准以及W3C标准是什么
+12. xhtml和html有什么区别
+13. Doctype的作用，严格模式与混杂模式如何区分，它们有何意义
+14. 行内元素有哪些？块级元素有哪些？空（void）元素有哪些？行内元素和块级元素有什么区别？
+15. Canvas和SVG有什么区别
+16. HTML5为什么只需要写<!Doctype HTML>
+17. 网页验证码是干嘛的，是为了解决什么安全问题
+18. viewport
+19. meta viewport相关
+20. 主流浏览器及其内核是什么
+21. 渐进增强与优雅降级之间的不同
+22. 为什么利用多个域名来存储网站资源会更有效
+23. 简述一下src与href的区别
+24. 从用户刷新网页开始，一次js请求一般情况下有哪些地方会有缓存处理
+25. 有哪些方法可以优化图片的加载，给用户更好的体验
+26. 常见排序算法的时间复杂度、空间复杂度
+27. web开发中会话跟踪的方法有哪些
+28. HTTP request报文结构是怎样的
+29. HTTP response报文结构是怎样的
+30. 谈谈你对Cookie的弊端
+
+
+
+## 进阶
+
+1. meta标签：自动刷新/跳转
+2. viewport
+3. 性能优化
+4. 如何高效操作DOM
+
+
+
+## html
+
+### 名词解释
+
+> web：
+
+> w3c
+
+> XML
+
+> HTML
+
+> XHTML：可以认为是HTML的另一个版本，完全符合XML的规范
+
+> 主流浏览器及其内核：
+>
+> IE：Trident
+>
+> Firfox：Gecko
+>
+> Chrome：Webkit、Blink
+>
+> Safari：Webkit
+>
+> Opera：Presto、Blink
+
+> 标准的文档结构：
+>
+> ```<!DOCTYPE html>``` 文档声明，告诉浏览器，用哪一种标准解释html，当前文档使用的html标准是html5，如果不写文档声明，则导致浏览器进入怪异渲染模式(浏览器默认渲染模式)，正常的渲染模式，则是按照W3C标准解析页面。
+>
+> ```<html lang="en"></html>``` 根元素，一个页面最多只能一个，该元素是其它所有元素的父元素或祖先元素，html5没有强制书写该元素，lang属性（language）：全局属性，表示该元素内部使用的是哪一种自然语言书写而成的。
+>
+> ```<head></head>``` 文档头，文档头内部的内容， 不会显示到页面上
+>
+> ```<meta></meta>``` 文档的元数据，附加信息。
+>
+> charset：指定网页内容编码，汉字编码字符集：GB2312、GBK（GB2312+繁体）。Unicode是万国码，包括了所有国家的语言。UTF-8是Unicode编码的一个版本
+>
+> ```<title></title>``` 网页标题
+>
+> ```<body></body``` 文档体，页面上所有要显示的内容，都应该放置到文档体中
+
+
+
+- 语义化
+
+> 每一个HTML元素都有具体的含义，例如：a元素：超链接、p元素：段落、h1元素：一级标题。
+>
+> 所有元素与展示效果无关，元素在页面中显示的效果，应该由css决定。每个元素都有一些浏览器的默认样式。
+>
+> **选择什么元素，取决于内容的含义，而不是显示出的效果**
+>
+> 需要语义化的原因：1. 为了搜索引擎优化。（百度，搜搜，Bing，Google）2. 为了让浏览器理解网页（阅读模式，语音模式）
+
+
+
+- 文本元素
+
+> 1. h1~h6：表示1级标题到6级标题
+>
+> 2. p：段落
+>
+> 3. span：没有语义，仅用于设置样式
+>
+> 4. pre：预格式化文本元素
+>
+> 空白折叠：在源代码中的连续空白字符（空格、换行、制表符），在页面显示时，会被折叠为一个空格。
+>
+> 在```pre```元素中的内容不会出现空白折叠，在这里面的元素，会按照源代码的格式显示到页面上，通常用于在网页中显示一些代码
+>
+> ```pre``` 元素功能的本质：有一个默认的css：
+>
+> ```css
+> white-space:pre
+> ```
+>
+> 显示代码时，通常外面套code元素，code表示代码区域
+
+
+
+- 实体字符
+
+> 实体字符通常在页面中表示一些特殊符号
+>
+> 1. &单词
+> 2. &#数字
+>
+> 常用的实体字符：
+>
+> 1. ```&lt;``` 小于符号（less than）
+> 2. ```&gt;``` 大于符号（greater than）
+> 3. ```&nbsp;``` 空格
+> 4. ```&copy;``` 版权
+> 5. ```&amp``` &符号
+
+
+
+- a元素
+
+> href属性：hyper reference（引用），通常表示跳转地址
+>
+> 1. 跳转地址
+> 2. 跳转到某个描点（href属性需要写上#，跳转地址写上id）
+> 3. 功能链接：
+>    1. 执行js代码：```javascript:```
+>    2. 发送邮件：```mailto:```
+>    3. 打电话：```tel:```
+>
+> target属性：
+>
+> 1. _self：在当前页面窗口中打开，默认值
+> 2. _blank：在新窗口中打开
+
+
+
+- 路径的写法
+
+> 路径分为决定路径和相对路径，站外资源：绝对路径。站内资源：相对路径。
+>
+> 1. 绝对路径：协议名://主机名:端口号/路径（schema://host:port/path）
+>    1. 协议名：http、https、file等
+>    2. 主机名：域名、IP地址
+>    3. 端口号：http协议默认端口号80，https协议默认端口号443
+> 2. 相对路径：以```./``` 开头，```./``` 表示当前资源所在的目录
+
+
+
+- img元素
+
+> 空元素
+>
+> alt属性：当图片资源失效时，将使用该属性的文字代替图片
+>
+> 1. 和a元素联用
+> 2. 和map元素联用
+> 3. 和figure属性联用
+
+
+
+- 多媒体元素
+
+> 1. video
+> 2. audio
+>
+> controls：控制控件的显示
+>
+> autoplay：布尔属性，自动播放
+>
+> muted：布尔属性，静音播放
+>
+> loop：布尔属性，循环播放
+
+
+
+- 列表元素
+
+> 1. 有序列表：ol>li
+> 2. 无序列表：ul>li
+> 3. 定义列表：dl>dt+dd
+
+
+
+- 容器元素
+
+> 容器元素：代表一个块区域，元素内部用于放置其它元素
+>
+> div元素：没有语义
+>
+> header：表示网页头部
+>
+> footer：表示网页的底部
+>
+> article：表示文章的正文
+>
+> section：表示网页的片段
+>
+> aside：表示文档的侧边栏
+>
+> nav：通常用于导航
+
+
+
+- 元素包含关系
+
+> 1. 容器元素中可以包含任何元素
+> 2. a元素几乎可以包含任何元素
+> 3. 某些元素有固定的子元素（ul>li、ol>lo、dl>dt+dd）
+> 4. 标题元素和段落元素不能相互嵌套，并且不能包含容器元素
+
+
+
+- iframe元素
+
+> 框架页：通常用于在网页中嵌入另一个页面
+>
+> 可替换元素：
+>
+> 1. 通常行盒
+> 2. 通常显示的内容取决于元素的属性
+> 3. css不能完全控制其中的样式
+> 4. 具有行块盒的特点
+
+
+
+- 表单元素
+
+> value属性：输入框的值
+>
+> placeholder属性：显示提示的文本，文本框没有内容时显示
+>
+> 当type属性为reset、button、submit时，input表示按钮
+>
+> 1. input：输入框
+>    1. text：普通文本框
+>    2. password：密码框
+>    3. date：日期选择框，兼容性问题
+>    4. search：搜索框，兼容性问题
+>    5. number：数字输入框
+>    6. checkout：多选框
+>    7. radio：单选框
+> 2. select：下拉列表选择框，通常盒option元素配合使用
+> 3. textarea：文本域，多行文本框
+> 4. button：按钮元素，type属性：reset、button、submit。默认值submit
+>
+> 表单状态：
+>
+> readonly属性：布尔属性，是否只读，不会改变表单显示样式
+>
+> disabled属性：布尔属性，是否禁用，会改变表单显示样式
+>
+> 配合表单使用的其它元素：
+>
+> label：普通元素，通常配合单选和多选框使用
+>
+> - 显示关联：可以通过for属性，让label关联一个表单元素，for属性书写表单元素id的值
+> - 隐式关联
+>
+> datalist：数据列表
+>
+> 该元素本身不会显示到页面，通常用于和普通文本框配合
+>
+> form元素：将整个表单元素，放置到form元素的内部，然后提交到服务器
+>
+> fieldset元素：表单分组，子元素：legend
+
+
+
+- 其它元素
+
+> 1. abbr：缩写词
+> 2. time：提供给浏览器或搜索引擎阅读的时间
+> 3. em：斜体。```i```元素斜体
+> 4. b：无语义，用于加粗字体。```strong```元素加粗
+> 5. q：一小段引用文本（cite：引用的路径）
+> 6. blockqoute：一大段引用
+> 7. br：用于换行
+> 8. hr：无语义，用于分隔，水平线
+> 9. meta：可以用于搜索引擎优化
+>    1. name="keyword"
+>    2. name="author"
+>    3. name="description"
+> 10. link：链接外部资源
+>     1. rel属性：链接地址
+>     2. type属性：链接的资源的MIME类型
+>     3. rel:icon或shortcut icon：用于显示网页上面的图标
+>     4. 还可以放在网站的根目录下，取名```favicon.ico```
+
+
+
+
+
+
+
+## html5
+
+
+
